--- a/budget.css
+++ b/budget.css
@@ -1,12 +1,97 @@
-*{
-    background-color:blanchedalmond;
+body {
+   
+    margin: 0;
+    background-color: #f6f7f0;
+    font-family: -apple-system, BlinkMacSystemFont, "San Francisco", "Segoe UI", "Roboto", "Helvetica Neue", sans-serif;
+}
+
+.top{
+    text-align: center;
     
 }
+.h2{
+    text-align: center;
+}
+
+.form-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column; 
+    justify-content: center;
+    gap: 20px; 
+    align-items: center; 
+    margin: 0 auto;
+    padding-top: 50px;
+}
+
+.card{
+    display: flex;
+    flex-direction:row;
+    gap: 20px; 
+    align-items: center; 
+    margin-top: 200px;
+    background: white;
+
+}
+form {
+    width: 400px;
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    text-align: center;
+
+}
+
+input {
+    width: 70%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    height: 30px;
+    margin-bottom: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+button {
+    padding: 10px 20px;
+    cursor: pointer;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    transition: transform 0.3s ease;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    background-color: #6CBDE9;
+    color: white;
+    width: 70%; 
+    height: 50px;
+}
+
+button:hover {
+    transform: translateY(5px);
+    background-color:  #4caadc;
+}
+
+
+nav {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    position: fixed;   
+    top: 20px;      
+    left: 15%;             
+    transform: translateX(-50%);
+    z-index: 1000;          
+    background-color: white;
+    padding: 10px 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+}
+
 h1{
     background-color: #BAE0F3;
     color: #F6F7F0;
     border: 1px solid black;
-    width:20em;
+    width:10em;
     margin: 10px auto;
     text-align: center;
 }
@@ -39,36 +124,7 @@ h4{
     font-size: 14px;
     background-color: #B7E4C7;
 }
-form{
-    background: #74C69D;
-    margin: auto;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-    height: 20vw;
-    width: 30vw;
-    padding: 10px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rbga(0,0,0,0.1);
-    border-color: black;
 
-}
-form input, form button{
-    margin: 10px 0;
-}
-form input{
-    background-color: white;
-}
-button{
-    background-color: #74C69D;
-    color: #F6F7F0;
-    border-radius: 15px;
-
-}
-button:hover{
-    background-color: #B7E4C7;
-}
 nav{
     display: flex;
     justify-content: center;
@@ -86,7 +142,4 @@ h3{
     padding: 5px;
     border: black 1px solid;
 
-}
-.center-button{
-    margin: 0 auto;
 }
